ADD health swagger documentation
